[gd_scene load_steps=3 format=3 uid="uid://bo4tlnofwiden"]

[ext_resource type="Script" uid="uid://l18k60xmlpac" path="res://scene/site_select_hud/site_select_hud.gd" id="1_4k075"]
[ext_resource type="PackedScene" uid="uid://fusraiemv1iq" path="res://scene/site/site.tscn" id="2_3xl2m"]

[node name="SiteSelectHUD" type="CanvasLayer"]
script = ExtResource("1_4k075")

[node name="ConfirmButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.5
offset_top = -220.0
offset_right = 60.5
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
text = "确认"
icon_alignment = 1

[node name="HideButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 114.0
offset_top = -220.0
offset_right = 234.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
text = "隐藏"
icon_alignment = 1

[node name="SiteIconContainer" type="ScrollContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -36.0
offset_right = 140.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="SiteIconContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Site" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Site2" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Site3" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Site4" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Site5" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Site6" parent="SiteIconContainer/HBoxContainer" instance=ExtResource("2_3xl2m")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[connection signal="pressed" from="ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
